p2/confs/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: main-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "false"

spec:
  rules:
    - host: app1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1
                port:
                  number: 8080
    - host: app2.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2
                port:
                  number: 8080
    - host: app3.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app3
                port:
                  number: 8080
